[gd_scene load_steps=8 format=3 uid="uid://wjsydbkfy6fj"]

[ext_resource type="Script" uid="uid://cew6aip3d6p7u" path="res://Scripts/game_over.gd" id="1_ojehl"]
[ext_resource type="AudioStream" uid="uid://bq3big4c131gb" path="res://Sounds/BooSound.wav" id="2_8fo1c"]
[ext_resource type="AudioStream" uid="uid://8sey4g4cn2l2" path="res://Sounds/Applause.wav" id="3_ek8ke"]
[ext_resource type="Texture2D" uid="uid://d38y0wh02yy7a" path="res://Sprites/CatPainting.png" id="4_14u15"]
[ext_resource type="Texture2D" uid="uid://b4sdjtivist5l" path="res://Sprites/FlowerPainting.png" id="5_j3ryr"]
[ext_resource type="Texture2D" uid="uid://cl4hbp475d1yk" path="res://Sprites/ParkPainting.png" id="5_rjluv"]
[ext_resource type="Texture2D" uid="uid://jnlji6ickl2b" path="res://Sprites/FriendshipPainting.png" id="6_j3ryr"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_ojehl")

[node name="PlayAgain" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = 11.0
offset_right = 121.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Play Again"

[node name="Quit" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = 127.0
offset_right = 97.0
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Quit"

[node name="Boo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_8fo1c")
bus = &"Voices"

[node name="Applause" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ek8ke")
bus = &"Voices"

[node name="FinishedPaintings" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -179.0
offset_top = 95.0
offset_right = 180.0
offset_bottom = 144.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
text = "Paintings Completed:"

[node name="FinalScore" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -179.0
offset_top = 164.0
offset_right = 180.0
offset_bottom = 213.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
text = "Final Score:"
horizontal_alignment = 1

[node name="CatPainting" type="Sprite2D" parent="."]
position = Vector2(187, 551.493)
rotation = -0.212046
scale = Vector2(0.153653, 0.153653)
texture = ExtResource("4_14u15")

[node name="park" type="Sprite2D" parent="."]
position = Vector2(187, 213)
rotation = 0.211185
scale = Vector2(0.153653, 0.153653)
texture = ExtResource("5_rjluv")

[node name="flower" type="Sprite2D" parent="."]
position = Vector2(1085, 551.493)
rotation = 0.211185
scale = Vector2(0.153653, 0.153653)
texture = ExtResource("5_j3ryr")

[node name="yay" type="Sprite2D" parent="."]
position = Vector2(1085, 197)
rotation = -0.211185
scale = Vector2(0.154, 0.154)
texture = ExtResource("6_j3ryr")

[connection signal="pressed" from="PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
